2015-06-02  Julien Bect  <julien.bect@centralesupelec.fr>

	wfg.c: Improve portability again

	* misc/pareto/private/wfg.c: Improve portability again. Now all
	variables are declared at the beginning of functions (as required
	by the C89 standard). And some unused headers have been removed,
	too.

2015-05-29  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_distrib_bivnorm_cdf.m: Bugfix

	* misc/distrib/stk_distrib_bivnorm_cdf.m: Fix a bug in the case of
	mixtures of singular and non-singular cases. Add unit test.

2015-05-28  Julien Bect  <julien.bect@centralesupelec.fr>

	wfg.c: Remove C99-specific code (stdbool.h).

	* misc/pareto/private/wfg.c: Remove C99-specific code (stdbool.h).

2015-05-27  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_pmisclass.m: Compute the probability of misclassification

	* utils/stk_pmisclass.m: New function to compute the probability
	of misclassification with respect to a given threshold (either the
	current probability of misclassification or the expectation of the
	future probability of misclassification).
	* examples/02_design_of_experiments/stk_example_doe04.m: Example
	script that demonstrates the use of stk_pmisclass ().

	stk_dominatedhv.m: New function to compute dominated hypervolumes.

	* misc/pareto/stk_dominatedhv.m: New function to compute
	dominated hypervolumes, which uses WFG 1.10 internally
	* misc/pareto/private/stk_dominatedhv_mex.c: MEX-file wrapper for WFG
	* admin/octpkg/INDEX: Add new function to the index
	* admin/octpkg/Makefile: Add new MEX-file to the Makefile
	* config/stk_config_makeinfo.m:Add new MEX-file to the build list

	Import WFG 1.10.

	* misc/pareto/private/wfg.c: Main WFG source file, with minor changes
	* misc/pareto/private/wfg.h: Main WFG header, with minor changes
	* misc/pareto/private/wfg.README: WFG README + ChangeLog + Copyright
	* admin/build_tools/build_octpkg.m: Ignore wfg.README.

	Make it possible to have several source files for one MEX.
